# scenaria

./: .gitignore  CHANGELOG.md  README.md  Scenaria.spec  main.py  pyproject.toml  release.json.example  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: __main__.py  brand.py  browser_compat.py  browser_config.py  browser_focus.py  browser_session.py  cli.py  download_helpers.py  feature_store.py  gherkin_blocks.py  gherkin_context.py  gherkin_outline.py  gherkin_parse.py  gherkin_picker.py  gherkin_quick_fixes.py  gherkin_refactor.py  gherkin_ru.py  gherkin_serialize.py  gherkin_snippets.py  help_topics.py  html_report.py  http_auth.py  junit_report.py  paths.py  picker_script.py  play_log.py  player.py  player_context.py  player_highlight.py  player_run.py  player_step_executor.py  player_step_helpers.py  player_trace.py  player_types.py  player_worker.py  playwright_browsers.py  playwright_export.py  playwright_lifecycle.py  progress_state.py  project_config.py  (+33 more)
app/mvc/: __init__.py  controller_host.py
app/mvc/controllers/: __init__.py  (+7 more)
app/plugins/: __init__.py  installer.py  loader.py  models.py  playwright_runner.py  protocol.py  registry.py
app/qt/: __init__.py  app.py  branding.py  dialog_buttons.py  dialogs.py  drag_drop.py  file_dialogs.py  fonts.py  icons.py  labels.py  lucide_svgs.py  main_window.py  main_window_batch.py  main_window_dragdrop.py  main_window_layout.py  main_window_menus.py  main_window_palette.py  main_window_playback.py  main_window_update.py  main_window_welcome.py  plugin_host.py  splash.py  startup.py  sync_prompts.py  theme.py  update_ui.py  worker_bridge.py
app/update/: __init__.py  checker.py  http_download.py  installer.py  progress.py
assets/branding/: README.md
docs/: GETTING_STARTED.md  MIGRATION.md  PLAYWRIGHT_EXPORT.md  RELEASE.md  ROADMAP.md  ROADMAP_TASKS.md  VERSIONING.md
docs/archive/: COMPLETED_SPRINTS.md
examples/: 01-pervaya-proverka.feature  02-perehod-po-ssylke.feature  03-uslovnyy-shag.feature  04-tablica-primerov.feature  05-testclient-kontekst.feature  README.md
scripts/: build.ps1  build_vanessa_addon.py  check_mixin_methods.py  debug_feature_parse.py  debug_feature_trim_chars.py  generate_app_icon.py  split_gherkin_ru.py  split_player.py  split_recording_controller.py
tests/: README.md  conftest.py  integration_subprocess.py  test_backlog_batch1.py  test_backlog_batch2.py  test_branding.py  test_browser_config.py  test_browser_focus.py  test_browser_overlay.py  test_browser_session.py  test_browser_state_sync.py  test_browser_test_client.py  test_catalog_context_menu.py  test_catalog_run_selection.py  test_catalog_state.py  test_catalog_tags.py  test_catalog_tree_resize.py  test_check_mixin_methods.py  test_cli_import_export.py  test_cli_run.py  test_cli_validate.py  test_click_selectors.py  test_command_palette.py  test_continue_recording.py  test_dialog_buttons.py  test_dirty_banner.py  test_download_helpers.py  test_drag_drop.py  test_editor_tabs.py  test_examples.py  test_feature_bez_dogovora.py  test_fonts.py  test_gherkin_auto_apply.py  test_gherkin_completions.py  test_gherkin_context.py  test_gherkin_editor.py  test_gherkin_highlighter.py  test_gherkin_picker.py  test_gherkin_ru.py  test_gherkin_snippets_coverage.py  (+86 more)
tests/fixtures/: bez_dogovora.feature  signature_demo.feature  signature_demo.html
(+54 files in other folders)
