[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scenaria"
version = "0.2.7"
description = "Scenaria — запись и запуск автотестов сайтов (Gherkin + Playwright)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "playwright>=1.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
scenaria = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: launches a real browser (run before Qt tests in CI)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
