[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scenaria"
version = "0.6.6"
description = "Scenaria — запись и запуск автотестов сайтов (Gherkin + Playwright)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "playwright>=1.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
scenaria = "app.cli:main"

[project.entry-points."scenaria.plugins"]
vanessa = "scenaria_vanessa.plugin:VanessaPlugin"

[tool.setuptools.packages.find]
where = [".", "packages/scenaria_vanessa"]
include = ["app*", "scenaria_vanessa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: launches a real browser; runs first and serialized (before Qt tests)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
