[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scenaria"
version = "0.11.2"
description = "Scenaria — запись и запуск автотестов сайтов (Gherkin + Playwright)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "playwright>=1.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "pillow>=10.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
scenaria = "app.cli:main"

[project.entry-points."scenaria.plugins"]
vanessa = "scenaria_vanessa.plugin:VanessaPlugin"

[tool.setuptools.packages.find]
where = [".", "packages/scenaria_vanessa"]
include = ["app*", "scenaria_vanessa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: launches a real browser; runs first and serialized (before Qt tests)",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "packages/scenaria_vanessa"
follow_imports = "skip"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "scenaria_vanessa.*"
ignore_missing_imports = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E501: many legacy Russian UI strings; line-length=100 still guides new edits.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Re-exports after core definitions avoid circular imports during package load.
"app/gherkin_ru.py" = ["E402"]
# Re-exports for app.qt.dialogs public API (vanessa add-on, legacy imports).
"app/qt/dialogs.py" = ["F401"]
